fix some spacing on mobile, override font size from cutenews

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -92,6 +92,10 @@ a.post-link {
   }
 }
 
+h5 a.post-link {
+  text-transform: none;
+}
+
 .post {
   color: $ieee-dark-gray !important;
   font-family: $trueno-ultralite !important;
@@ -112,8 +116,9 @@ a.post-link {
     font-size: 18px;
   }
 
-  p {
+  p, div {
     font-size: 21px;
+    line-height: 1.58;
   }
 
   div[style], span[style] {
@@ -132,10 +137,18 @@ a.post-link {
       font-size: 16px;
     }
 
-    p {
+    p, div {
       font-size: 18px;
     }
   }
+
+  #blog-post {
+    margin-bottom: 0;
+  }
+}
+
+.post-section-divider {
+  margin-bottom: 1rem;
 }
 
 .post-details {
